--- a/project/css/project.css
+++ b/project/css/project.css
@@ -1,17 +1,17 @@
 /* Font */
 @font-face {
-	font-family:'Noto Sans KR';
+	font-family:'NanumSquare';
 	font-weight:400;
 	font-style:normal;
-	src:url('../css/font/NotoSans-regular.woff') format('woff'),
-		url('../css/font/NotoSans-regular.ttf') format('truetype');
+	src:url('../css/font/NanumSquareL.woff') format('woff'),
+		url('../css/font/NanumSquareL.ttf') format('truetype');
 }
 @font-face {
-	font-family:'Noto Sans KR Bold';
+	font-family:'NanumSquare';
 	font-weight:700;
 	font-weight:normal;
-	src:url('../css/font/NotoSans-bold.woff') format('woff'),
-		url('../css/font/NotoSans-bold.ttf') format('truetype');
+	src:url('../css/font/NanumSquareEB.woff') format('woff'),
+		url('../css/font/NanumSquareEB.ttf') format('truetype');
 }
 
 /* reset */
@@ -29,7 +29,7 @@ address,caption,cite,code,dfn,em,var{font-style:normal;font-weight:normal}
 table{border:0;border-collapse:collapse;vertical-align:top}
 html{width:100%;height:100%}
 body{min-height:100%;background:#fff;color:#808184}
-body,th,td,input,select,textarea,button{font-family:'Noto Sans KR','Apple SD Gothic Neo','나눔고딕',NanumGothic,ng,'돋움',dotum,Helvetica,sans-serif;font-size:16px;line-height:1.27;color:#808184}
+body,th,td,input,select,textarea,button{font-family:'NanumSquare','Apple SD Gothic Neo','나눔고딕',NanumGothic,ng,'돋움',dotum,Helvetica,sans-serif;font-size:16px;line-height:1.27;color:#808184}
 a{color:#767676;text-decoration:none;cursor:pointer}
 a:focus,a:active,a:hover,a:focus{color:#767676;text-decoration:underline}
 ::-webkit-input-placeholder{color:#999}
