--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+@font-face {
+  font-family: "notokr";
+  src: url("font/notokr-regular.eot") format("eot");
+  src: url("font/notokr-regulareot?#iefix") format("embedded-opentype"), url("font/notokr-regular.woff") format("woff"), url("font/notokr-regular.woff2") format("woff2"), url("font/notokr-regular.ttf") format("truetype");
+  font-weight: 100;
+}
+
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, p, table, th, td, form, fieldset, legend, textarea, input, select, textarea, button, article, aside, dialog, footer, header, section, footer, nav, figure, main {
   margin: 0;
   padding: 0;
@@ -76,15 +83,10 @@ input::-ms-reveal {
   display: none;
 }
 
-@font-face {
-  font-family: "notokr";
-  src: url("font/notokr-regular.eot") format("eot");
-  src: url("font/notokr-regulareot?#iefix") format("embedded-opentype"), url("font/notokr-regular.woff") format("woff"), url("font/notokr-regular.woff2") format("woff2"), url("font/notokr-regular.ttf") format("truetype");
-  font-weight: 100;
-}
+#wrap{min-width:960px}
 #header{background-color: #666}
 h1{width: 960px;margin:0 auto;font-size: 31px;color:#fff;line-height: 60px;}
-#container{width:960px;margin:50px auto 0;padding:0 50px}
+#container{width:960px;margin:50px auto 0;padding:0 50px;box-sizing:border-box;}
 .list{position:relative}
 .depth{position:relative;margin-top:20px}
 .depth:before{position:absolute;top:0;bottom:0;left:20%;width: 1px;background-color: #dddddd;content:''}
@@ -94,7 +96,7 @@ h1{width: 960px;margin:0 auto;font-size: 31px;color:#fff;line-height: 60px;}
 .list2{float:right;width:80%;}
 .depth2 a{display:block;float:none;padding:10px 30px;font-weight: normal;color:#888}
 .depth2 a:hover span{border-bottom:3px solid #b4e7f8;box-shadow: inset 0 -4px 0 #b4e7f8;}
-.btn_top{position:fixed;bottom:20px;right:20px;width: 50px;height: 50px;line-height: 999px;}
+.btn_top{display:none;position:fixed;bottom:20px;right:20px;width: 50px;height: 50px;line-height: 999px;}
 .btn_top:before{position: absolute;top:50%;left:50%;width: 30px;height: 30px;margin:-15px 0 0 -15px;background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3C!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0%29 --%3E%3C!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'%3E%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='284.929px' height='284.929px' viewBox='0 0 284.929 284.929' style='enable-background:new 0 0 284.929 284.929;' xml:space='preserve'%3E%3Cstyle%3E%0A.color%7Bopacity:0.3%7D%0A%3C/style%3E%3Cg%3E%3Cpath class='color' d='M282.082,195.285L149.028,62.24c-1.901-1.903-4.088-2.856-6.562-2.856s-4.665,0.953-6.567,2.856L2.856,195.285 C0.95,197.191,0,199.378,0,201.853c0,2.474,0.953,4.664,2.856,6.566l14.272,14.271c1.903,1.903,4.093,2.854,6.567,2.854 c2.474,0,4.664-0.951,6.567-2.854l112.204-112.202l112.208,112.209c1.902,1.903,4.093,2.848,6.563,2.848 c2.478,0,4.668-0.951,6.57-2.848l14.274-14.277c1.902-1.902,2.847-4.093,2.847-6.566 C284.929,199.378,283.984,197.188,282.082,195.285z'/%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");background-size: 100% 100%;content:''}
 .btn_top:hover:before{
   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3C!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0%29 --%3E%3C!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'%3E%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='284.929px' height='284.929px' viewBox='0 0 284.929 284.929' style='enable-background:new 0 0 284.929 284.929;' xml:space='preserve'%3E%3Cstyle%3E%0A.color%7Bopacity:1%7D%0A%3C/style%3E%3Cg%3E%3Cpath class='color' d='M282.082,195.285L149.028,62.24c-1.901-1.903-4.088-2.856-6.562-2.856s-4.665,0.953-6.567,2.856L2.856,195.285 C0.95,197.191,0,199.378,0,201.853c0,2.474,0.953,4.664,2.856,6.566l14.272,14.271c1.903,1.903,4.093,2.854,6.567,2.854 c2.474,0,4.664-0.951,6.567-2.854l112.204-112.202l112.208,112.209c1.902,1.903,4.093,2.848,6.563,2.848 c2.478,0,4.668-0.951,6.57-2.848l14.274-14.277c1.902-1.902,2.847-4.093,2.847-6.566 C284.929,199.378,283.984,197.188,282.082,195.285z'/%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
