--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -154,9 +154,10 @@ pre code.hljs {
       padding-left: $em-base;
     }
     img {
+      overflow: hidden;
       max-height: 2.5em;
-      margin-top: 0.75em;
-      padding-right: 1em;
+      margin: 0.75em 1em 0 0;
+      border-radius: 50%;
     }
     span {
       font-size: 1.25em;
