--- a/study/canvas-transparent/style.css
+++ b/study/canvas-transparent/style.css
@@ -2,16 +2,25 @@ body {
   background-color: orange;
 }
 section {
-  padding: 50px 0;
-  border: 1px solid #1a1a1a;
-}
-h1 {
+  padding: 20px 0;
+  text-align: center;
 }
 
-canvas {
+h1 {
+  padding: 10px 0;
+  background-color: #1a1a1a;
+  font-size: 2rem;
+  color: #fff;
+}
+
+div + div {
+  padding-top: 20px;
+}
+canvas,
+video {
   border: 1px solid #1a1a1a;
+  box-sizing: border-box;
 }
 
 video {
-  object-fit: fill;
 }
