--- a/study/inflearn/apple-clone/css/main.css
+++ b/study/inflearn/apple-clone/css/main.css
@@ -167,7 +167,7 @@ body.before-load {
 }
 
 .mid-message {
-  max-width: 1000px;
+  width: 1000px;
   margin: 0 auto;
   padding: 0 1rem;
   font-size: 2rem;
