:hammer: add storybook

--- a/study/storybook/src/asset/scss/common/_common.scss
+++ b/study/storybook/src/asset/scss/common/_common.scss
@@ -1,16 +1,17 @@
-:global {
+legend,
+caption span,
+:global(.blind) {
+  overflow: hidden;
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  font-size: medium;
+  line-height: normal;
+  white-space: nowrap;
+}
 
-  legend,
-  caption span,
-  .blind {
-    overflow: hidden;
-    position: absolute;
-    clip: rect(0 0 0 0);
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    font-size: medium;
-    line-height: normal;
-    white-space: nowrap;
-  }
+body {
+  font-family: $noto;
 }
