--- a/study/storybook/src/asset/scss/global.scss
+++ b/study/storybook/src/asset/scss/global.scss
@@ -1,7 +1,5 @@
+@import './helper/_mixins.scss';
+@import './helper/_variables.scss';
 @import './common/_reset.scss';
 @import './common/_common.scss';
 @import './common/_font.scss';
-
-header {
-  background-color: orange;
-}
