--- a/study/storybook/src/component/Header/Header.module.scss
+++ b/study/storybook/src/component/Header/Header.module.scss
@@ -1,10 +1,28 @@
 .header {
-  position: relative;
-  height: 52px;
-  background-color: $dark;
+
+  &:before {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    height: 52px;
+    content: '';
+
+  }
+
+  &_inner {
+    display: flex;
+    align-items: center;
+    position: relative;
+    height: 52px;
+    background-color: $dark;
+  }
 
   &_logo {
     display: inline-block;
+    position: relative;
+    z-index: $header-title-z-index;
     height: 100%;
     margin-left: 77px;
 
@@ -14,7 +32,7 @@
       height: 100%;
 
       background: {
-        image: url('asset/images/logo_white.png');
+        image: url('asset/images/png/logo_white.png');
         repeat: no-repeat;
         position: center center;
       }
@@ -26,6 +44,7 @@
   position: absolute;
   top: 0;
   left: 26px;
+  z-index: $header-menu-z-index;
   width: 33px;
   height: 100%;
 
@@ -35,9 +54,75 @@
 }
 
 .gnb {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
 
   &_item {
     display: inline-block;
+    margin: 0 10px;
+    color: #232323;
+
+    &:hover {
+      color: #232323;
+    }
+
+    &[aria-pressed='true'] {
+      color: $white;
+    }
+  }
+}
+
+.utils {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  padding-right: 7px;
+
+  &_service {
+    &_link {
+      font-size: 12px;
+      color: $white;
+
+      &+& {
+        margin-left: 8px;
+      }
+    }
+  }
+
+  &_search {
+    display: flex;
+    align-items: center;
+    width: 96px;
+    height: 32px;
+    margin-left: 10px;
+    border-radius: 2px;
+    background-color: rgba($black, .2);
+
+    &_input {
+      width: 100%;
+      height: 100%;
+      padding-left: 7px;
+      font-size: 12px;
+      color: $white;
+      box-sizing: border-box;
+    }
+
+    &_btn {
+      flex-shrink: 0;
+      width: 30px;
+      height: 100%;
+      color: $white;
+      font-size: 0;
+    }
   }
 }
