--- a/study/storybook/src/component/ProfileThumbnail/ProfileThumbnail.module.scss
+++ b/study/storybook/src/component/ProfileThumbnail/ProfileThumbnail.module.scss
@@ -3,6 +3,13 @@
   width: 34px;
   height: 34px;
   margin-left: 5px;
+  text-align: center;
+
+  &_image {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
 }
 
 .no_image {
