:lipstick: style test, 하이픈 클래스

--- a/study/storybook/src/component/Header/Header.module.scss
+++ b/study/storybook/src/component/Header/Header.module.scss
@@ -1,4 +1,11 @@
 .header {
+  // &-wrapper {
+  //   border: 1px solid red;
+
+  //   &__inner {
+  //     border: 1px solid blue;
+  //   }
+  // }
 
   &:before {
     position: fixed;
