:lipstick: update style

--- a/study/storybook/src/asset/scss/common/_common.scss
+++ b/study/storybook/src/asset/scss/common/_common.scss
@@ -11,3 +11,15 @@ caption span,
   line-height: normal;
   white-space: nowrap;
 }
+
+:global(.blind) {
+  overflow: hidden;
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  font-size: medium;
+  line-height: normal;
+  white-space: nowrap;
+}
