--- a/study/codelab/react-basic/styles/scss/_cardList.scss
+++ b/study/codelab/react-basic/styles/scss/_cardList.scss
@@ -1,27 +1,63 @@
-.card-list-container {
-  width: $full-width;
-  height: $full-height;
-  background-color: $bg-gray;
+.card-list {
+  &-container {
+    width: $full-width;
+    height: $full-height;
+    background-color: $bg-gray;
+  }
 
-  &.wrapper {
+  &-wrapper {
     position: relative;
     width: 900px;
     height: $full-height;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 20px;
     background-color: $white;
+  }
 
-    .card {
-      display: inline-block;
+  &-control {
+    &-input {
       width: 200px;
-      height: 300px;
-      margin-left: 20px;
+      height: 30px;
+      margin-left: 10px;
+      padding: 0 10px;
       border: 1px solid $bd-gray;
-      border-radius: 5px;
 
       &:first-child {
         margin-left: 0;
       }
     }
+
+    &-btn {
+      width: 50px;
+      height: 30px;
+      margin-left: 5px;
+    }
+  }
+
+
+  &-box {
+    display: inline-block;
+    margin: 0 -10px;
+  }
+
+  &-item {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 200px;
+    margin: 10px 10px 0;
+    border: 1px solid $bd-gray;
+    border-radius: 5px;
+    background-color: powderblue;
+  }
+
+  &-name {
+    display: block;
+  }
+
+  &-job {
+    display: block;
   }
 }
