--- a/study/storybook/src/stories/IconList/index.module.scss
+++ b/study/storybook/src/stories/IconList/index.module.scss
@@ -69,15 +69,30 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
     height: 100px;
     padding: 10px;
     background-color: #eee;
     text-align: center;
     box-sizing: border-box;
 
-    .dark & {
+    &:hover {
+      .list_viewer_text {
+        visibility: visible;
+      }
+    }
+
+    &.dark {
       background-color: #2a2a2a;
-      background-color: #eee;
+    }
+
+    &_text {
+      visibility: hidden;
+      position: absolute;
+      right: 5px;
+      bottom: 5px;
+      font-size: 11px;
+      color: gray;
     }
   }
 
@@ -96,6 +111,7 @@
     overflow: auto;
     height: 100px;
     font-size: 12px;
+    font-weight: 300;
     color: rgba(51, 51, 51, .5);
 
     &_inner {
