:bulb: add color props

--- a/study/storybook/src/asset/scss/helper/_mixins.scss
+++ b/study/storybook/src/asset/scss/helper/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin ellipsis($lines: 1,
-  $display: inline-block,
+  $display: block,
   $width: null,
   $max-width: null,
   $overflow: hidden) {
