--- a/study/codelab/react-basic/styles/scss/_cardList.scss
+++ b/study/codelab/react-basic/styles/scss/_cardList.scss
@@ -17,7 +17,7 @@
   &-control {
     &-input {
       width: 200px;
-      height: 30px;
+      height: 40px;
       margin-left: 10px;
       padding: 0 10px;
       border: 1px solid $bd-gray;
@@ -28,29 +28,72 @@
     }
 
     &-btn {
-      width: 50px;
-      height: 30px;
+      width: 60px;
+      height: 40px;
       margin-left: 5px;
+      border-radius: 3px;
+      background-color: #e7e7e7;
+      font-size: 14px;
     }
   }
 
 
   &-box {
-    display: inline-block;
-    margin: 0 -10px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px -5px 0;
   }
 
   &-item {
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 200px;
+    width: 25%;
     height: 200px;
-    margin: 10px 10px 0;
-    border: 1px solid $bd-gray;
-    border-radius: 5px;
-    background-color: powderblue;
+    padding: 5px;
+
+    &-link {
+      display: block;
+      height: 100%;
+      border: 1px solid rgba(#000, .05);
+      border-radius: 5px;
+      background-color: cornsilk;
+
+      &:hover {
+        background-color: antiquewhite;
+      }
+    }
+
+    &-box {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      padding: 15px;
+    }
+
+    &-title {
+      font-weight: bold;
+      font-size: 12px;
+      color: chocolate;
+    }
+
+    &-data {
+      overflow: hidden;
+      margin-bottom: 10px;
+      width: 100%;
+      font-size: 15px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      span {
+        display: block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+    }
   }
 
   &-name {
