--- a/study/codelab/react-basic/styles/scss/_global.scss
+++ b/study/codelab/react-basic/styles/scss/_global.scss
@@ -1,12 +1,173 @@
-html,
-body,
-#__next {
-  width: 100%;
-  height: 100%;
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 
-* {
-  margin: 0;
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+table,
+th,
+td,
+form,
+fieldset,
+legend,
+textarea,
+input,
+select,
+textarea,
+button,
+footer,
+header,
+section,
+figure {
   padding: 0;
-  box-sizing: border-box;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+b,
+strong {
+  font-weight: 700;
+}
+
+ol,
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+table {
+  border-spacing: 0;
+}
+
+hr {
+  box-sizing: content-box;
+  height: 0;
+  margin: 0;
+  border: 0;
+}
+
+pre {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  text-decoration: underline dotted;
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+progress {
+  vertical-align: baseline;
+}
+
+em,
+address {
+  font-style: normal;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+
+button {
+  border: 0;
+  background: transparent;
+  cursor: pointer;
+
+  &[disabled] {
+    cursor: default;
+  }
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit
+}
+
+input,
+button,
+select {
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: 0;
+  background: transparent;
+}
+
+input {
+
+  &[type="number"]::-webkit-outer-spin-button,
+  &[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    height: auto;
+    margin: 0;
+  }
+
+  &[type="search"] {
+    -webkit-appearance: textfield;
+    outline-offset: -2px;
+  }
+
+  &::-webkit-search-decoration,
+  &::-webkit-search-cancel-button,
+  &::-webkit-search-results-button,
+  &::-webkit-search-results-decoration {
+    display: none;
+  }
+
+  &::-webkit-file-upload-button {
+    -webkit-appearance: button;
+    font: inherit;
+  }
+}
+
+details {
+  display: block;
+}
+
+summary {
+  display: list-item;
 }
