--- a/study/codelab/react-basic/styles/scss/_cardList.scss
+++ b/study/codelab/react-basic/styles/scss/_cardList.scss
@@ -15,6 +15,10 @@
   }
 
   &-control {
+    display: flex;
+    align-items: center;
+    padding: 20px 0;
+
     &-input {
       width: 200px;
       height: 40px;
@@ -28,15 +32,37 @@
     }
 
     &-btn {
-      width: 60px;
+      min-width: 60px;
       height: 40px;
+      padding: 0 10px;
       margin-left: 5px;
       border-radius: 3px;
       background-color: #e7e7e7;
       font-size: 14px;
     }
+
+    &-viewer {
+      display: inline-block;
+      position: relative;
+
+      input {
+        position: absolute;
+      }
+    }
   }
 
+  &-preview-image {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border: 1px solid #ddd;
+
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
+  }
 
   &-box {
     display: flex;
