--- a/study/codelab/react-basic/styles/scss/_global.scss
+++ b/study/codelab/react-basic/styles/scss/_global.scss
@@ -171,3 +171,12 @@ details {
 summary {
   display: list-item;
 }
+
+.blind {
+  overflow: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  clip: rect(0 0 0 0);
+}
